fix chat messages (alignment to right)

--- a/client/src/components/messages/message/message.module.css
+++ b/client/src/components/messages/message/message.module.css
@@ -14,7 +14,7 @@
 }
 
 .alignRight {
-  align-items: end;
+  align-items: flex-end;
 }
 
 .welcome-message {
@@ -23,6 +23,7 @@
   justify-content: center;
   margin: 8px 0px;
 }
+
 .welcome-message p {
   font-size: 1rem;
 }
